<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/clForm"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/lbl_marginStart"
        android:labelFor="@+id/txtName"
        android:text="@string/activity_main_lblName"
        android:textColor="@color/avatar_label_background"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_marginStart"
        android:layout_marginEnd="@dimen/txt_marginEnd"
        android:inputType="textPersonName"
        android:hint="@string/activity_main_txtName"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/lbl_marginStart"
        android:layout_marginTop="@dimen/lbl_marginTop"
        android:labelFor="@+id/txtEmail"
        android:text="@string/activity_main_lblEmail"
        android:textColor="@color/avatar_label_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_marginStart"
        android:layout_marginEnd="@dimen/txt_marginEnd"
        android:hint="@string/activity_main_txtEmail"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:nextFocusForward="@+id/txtPhonenumber"
        app:layout_constraintEnd_toStartOf="@+id/imgEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEmail"
        tools:ignore="Autofill,LabelFor" />

    <ImageView
        android:id="@+id/imgEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ic_marginEnd"
        android:src="@drawable/ic_email_24dp"
        android:textColor="@color/avatar_label_background"
        app:layout_constraintBottom_toBottomOf="@+id/txtEmail"
        app:layout_constraintEnd_toStartOf="@+id/txtPhonenumber"
        app:layout_constraintTop_toTopOf="@+id/txtEmail"
        android:contentDescription="@string/description_imgEmail" />

    <TextView
        android:id="@+id/lblPhonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/lbl_marginStart"
        android:layout_marginTop="@dimen/lbl_marginTop"
        android:labelFor="@+id/txtPhonenumber"
        android:text="@string/activity_main_lblPhonenumber"
        android:textColor="@color/avatar_label_background"
        app:layout_constraintStart_toEndOf="@+id/imgEmail"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtPhonenumber"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/txt_marginEnd"
        android:ems="5"
        android:hint="@string/activity_main_txtPhonenumber"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="9"
        android:nextFocusDown="@+id/txtAddress"
        app:layout_constraintEnd_toStartOf="@+id/imgPhonenumber"
        app:layout_constraintTop_toBottomOf="@+id/lblPhonenumber"
        tools:ignore="Autofill,LabelFor" />

    <ImageView
        android:id="@+id/imgPhonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ic_marginEnd"
        android:src="@drawable/ic_call_24dp"
        android:textColor="@color/avatar_label_background"
        app:layout_constraintBottom_toBottomOf="@+id/txtPhonenumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPhonenumber"
        android:contentDescription="@string/description_imgPhonenumber"/>

    <TextView
        android:id="@+id/lblAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/lbl_marginStart"
        android:layout_marginTop="@dimen/lbl_marginTop"
        android:labelFor="@+id/txtAddress"
        android:text="@string/activity_main_lblAddress"
        android:textColor="@color/avatar_label_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_marginStart"
        android:layout_marginEnd="@dimen/txt_marginEnd"
        android:hint="@string/activity_main_txtAddress"
        android:imeOptions="actionNext"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toStartOf="@+id/imgAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAddress"
        tools:ignore="Autofill,LabelFor" />

    <ImageView
        android:id="@+id/imgAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ic_marginEnd"
        android:src="@drawable/ic_map_24dp"
        android:textColor="@color/avatar_label_background"
        app:layout_constraintBottom_toBottomOf="@+id/txtAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtAddress"
        android:contentDescription="@string/description_imgAddress"/>

    <TextView
        android:id="@+id/lblWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/lbl_marginStart"
        android:layout_marginTop="@dimen/lbl_marginTop"
        android:labelFor="@+id/txtWeb"
        android:text="@string/activity_main_lblWeb"
        android:textColor="@color/avatar_label_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddress" />

    <EditText
        android:id="@+id/txtWeb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/txt_marginStart"
        android:layout_marginEnd="@dimen/txt_marginEnd"
        android:hint="@string/activity_main_txtWeb"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        app:layout_constraintEnd_toStartOf="@+id/imgWeb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblWeb"
        tools:ignore="Autofill,LabelFor" />

    <ImageView
        android:id="@+id/imgWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ic_marginEnd"
        android:src="@drawable/ic_web_24dp"
        android:textColor="@color/avatar_label_background"
        app:layout_constraintBottom_toBottomOf="@+id/txtWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtWeb"
        android:contentDescription="@string/description_imgWeb" />

    <TextView
        android:id="@+id/lblRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_lblRequired"
        android:textColor="@color/avatar_label_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtWeb"
        android:layout_marginStart="@dimen/lbl_marginStart"
        android:layout_marginTop="@dimen/lbl_marginTop"/>

</androidx.constraintlayout.widget.ConstraintLayout>
